<resources>
    <string name="app_name">打分器</string>

    <string name="app_status_online">在线</string>
    <string name="app_status_offline">离线</string>
    <!-- 确认成绩 begin -->
    <!-- 确认成绩成功后在 competitorName 位置显示的文本 -->
    <string name="validate_success_competitorName">休息一下!</string>

    <!-- Toast 提示 Begin -->
    <string name="validate_success">确认成绩成功</string>
    <string name="validate_Fail">确认成绩失败：请检查分数是否有错误或空</string>
    <!-- Toast 提示 end -->
    <!-- 确认成绩 end -->

    <!-- Toast 提示 Begin -->
    <string name="toast_first">第一人</string>
    <string name="toast_end">最后一人</string>
    <!-- Toast 提示 end -->

    <!-- alertDialog 相关 begin -->
    <string name="alertDialog_title_confirm">确认</string>
    <string name="alertDialog_title_confirmResult">成绩确认</string>
    <string name="alertDialog_title_confirmAgain">再次确认</string>
    <string name="alertDialog_message_confirmResult">是否确认成绩？</string>
    <string name="alertDialog_message_confirm_NoScoreValueCount">有%1$d项未打分，</string>
    <string name="alertDialog_message_ForceSkipScoring">是否放弃打分？</string>
    <string name="button_text_yes">是</string>
    <string name="button_text_no">否</string>
    <!-- alertDialog 相关 end -->

    <!-- 按钮上面的文本 begin -->
    <string name="buttonDot" translatable="false">.</string>
    <string name="button1" translatable="false">1</string>
    <string name="button2" translatable="false">2</string>
    <string name="button3" translatable="false">3</string>
    <string name="button4" translatable="false">4</string>
    <string name="button5" translatable="false">5</string>
    <string name="button6" translatable="false">6</string>
    <string name="button7" translatable="false">7</string>
    <string name="button8" translatable="false">8</string>
    <string name="button9" translatable="false">9</string>
    <string name="button0" translatable="false">0</string>
    <string name="buttonV" translatable="false">"确认
Validate"</string>
    <!--<string name="buttonV" translatable="false">V</string>-->

    <string name="imageButton_back_contentDescription" translatable="false">Back</string>
    <!--    <string name="buttonX" translatable="false">🔙</string>-->
    <string name="buttonP">上一人</string>
    <string name="buttonN">下一人</string>
    <string name="button_send" translatable="false">"发送
Send"</string>
    <!--<string name="button_send" translatable="false">S</string>-->
    <!-- 按钮上面的文本 end -->

    <!-- 进入设置页面的密码 end -->
    <!--    <string name="password_for_enter_settings" translatable="false">adminliao</string>-->

    <!-- 设置 begin -->
    <string name="settings_currentCompetitorInfoIndex" translatable="false">currentCompetitorInfoIndex</string>
    <string name="settings_currentScoreIndex" translatable="false">currentScoreIndex</string>
    <string name="settings_haveABreak" translatable="false">haveABreak</string>

    <!-- 设置页面 begin -->
    <!-- 网络 begin -->
    <string name="settings_network_header">网络</string>

    <string name="settings_network_local_port">本地端口</string>
    <string name="settings_network_local_port_key" translatable="false">network_local_port</string>
    <string name="settings_network_server_host">服务端地址</string>
    <string name="settings_network_server_host_key" translatable="false">network_server_host</string>
    <string name="settings_network_server_port">服务端端口</string>
    <string name="settings_network_server_port_key" translatable="false">network_server_port</string>

    <!-- 网络 end -->
    <!-- 客户端 begin -->
    <string name="settings_client_header">客户端</string>

    <string name="settings_client_id">客户端ID</string>
    <string name="settings_client_id_key" translatable="false">client_id</string>
    <!-- 客户端 end -->
    <!-- 设置页面 end -->
    <!-- 设置 end -->
    <string name="toast_noWifi">无Wifi网络</string>
</resources>